--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/storybook": "^4.3.2",
     "@nuxtjs/vuetify": "^1.12.3",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
     "jest": "^27.4.4",
+    "postcss": "^8.4.14",
     "ts-jest": "^27.1.1",
+    "ts-node": "^10.8.1",
     "vue-jest": "^3.0.4"
   }
 }
