--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/storybook": "^4.3.2",
     "@nuxtjs/vuetify": "^1.12.3",
+    "@socheatsok78/storybook-addon-vuetify": "^0.1.9",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
