--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.32.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
@@ -37,8 +39,13 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
     "babel-loader": "^8.2.5",
+    "css-loader": "^5.0.0",
     "jest": "^27.4.4",
-    "postcss": "^8.4.14",
+    "json-server": "^0.17.0",
+    "postcss": "^8.1.10",
+    "postcss-import": "^13.0.0",
+    "postcss-loader": "^4.1.0",
+    "postcss-url": "^10.1.1",
     "ts-jest": "^27.1.1",
     "ts-node": "^10.8.1",
     "vue-jest": "^3.0.4",
